--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
-Assets/generic space enemy
+Assets/generic space enemy/
 
 # Visual Studio cache directory
 .vs/
